<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_toolbar"
        android:id="@+id/toolbar" />

    <TextView
        android:id="@+id/tv_club_activity_date"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:layout_below="@+id/toolbar"
        android:textSize="20sp"
        tools:text="16/05/2016"/>

    <EditText
        android:id="@+id/txt_club_activity_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_club_activity_date"
        android:hint="@string/title"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/txt_club_activity_short_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_club_activity_title"
        android:layout_marginTop="10dp"
        android:hint="@string/description"/>

    <EditText
        android:id="@+id/txt_club_activity_long_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_club_activity_short_note"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:hint="@string/long_note"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_club_activity_long_note"
        android:text=" Location"
        android:visibility="invisible"
        android:paddingTop="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView" />


</RelativeLayout>