...
    <string name="location">Location</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="msg_activity_uploaded">Activity uploaded to server successfully. Click to view.</string>
    <string name="activity_uploaded">Activity Uploaded</string>
    <string name="activity_deleted">Activity Deleted</string>
    <string name="action_add">New Activity</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="home">Home</string>
    <string name="google_api_key">AIzaSyD34PoBxALwQ4xLPYc29inTXJ1czU8h1rA</string>
    <string name="google_places_key">AIzaSyAv2tIrknnKA94WMedkdLbTVDpH0g_aRf0</string>
    <string name="action_delete">Delete Activity</string>
    <string name="action_save">Save Activity</string>
    <string name="action_project_points">Show project points</string>
    <string name="city_name">CITY College, the International Faculty of the University of Sheffield, Leontos Sofou, Thessaloniki</string>
    <string name="msg_snackbar">One Activity Deleted!</string>
    <string name="undo">UNDO</string>
    <string name="progress_message">Let\'\ s put some effort on that ;)</string>
    <string name="issue_input_comment_hint">What was your effort about?</string>
...
