...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_issue" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_club_activity_title"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_alignLeft="@+id/tv_club_activity_short_note"
        android:layout_alignStart="@+id/tv_club_activity_short_note"
...
